# youtube-data-warehouse

./: .gitignore  Dockerfile  Makefile  README.md  dev.env  docker-compose.yaml  pyproject.toml  requirements.txt
airflow/: Dockerfile
airflow/dags/: youtube_dag.py
backend/: Dockerfile  requirements.txt  server.py
backend/app/: main.py
backend/app/api/v1/endpoints/: channel_stats.py  channels.py  video_stats.py  videos.py
backend/app/core/: config.py
backend/app/crud/: __init__.py  channel.py  channel_stats.py  video.py  video_stats.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  channel.py  channel_stats.py  video.py  video_stats.py
backend/app/schemas/: channel.py  channel_stats.py  video.py  video_stats.py
backend/app/utils/: datetime_utils.py  dependencies.py  youtube_service.py
backend/app/youtube/: client.py  parser.py
db/: init_oltp_db.sql
dbt/linguaspark/: dbt_project.yml
dbt/linguaspark/models/staging/: schema.yml  stg_yt_subs.sql  yt_subs.sql
frontend/: Dockerfile  requirements.txt  ui.py
kafka/: Dockerfile  kafka_consumer.py  requirements.txt
pipeline/: connection.py  main_pipeline.py
pipeline/ingestion/: to_landing.py
pipeline/utils/: db.py  sde_config.py
sql/: init_db.sql
src/yt_subs_parsing/: parsing_yt_sub.py
tests/: test_test.py
