[tool.poetry]
name = "linguaspark"
version = "0.1.0"
description = ""
authors = ["Kirill Bazarov <kl.bazarov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
youtube-transcript-api = "^0.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
